src/validation/tests/snapshots/rusty__validation__tests__reference_resolve_tests__resolve_simple_variable_references.snap
---
source: src/validation/tests/reference_resolve_tests.rs
expression: diagnostics
---
error: Could not resolve reference to b
   ┌─ <internal>:10:17
   │
10 │                 b;
   │                 ^ Could not resolve reference to b

error: Could not resolve reference to gb
   ┌─ <internal>:12:17
   │
12 │                 gb;
   │                 ^^ Could not resolve reference to gb


